triptie/static/css/social.css
/* General button styling */
.btn, .btn-primary, .btn-secondary, .btn-info, input[type="submit"], input[type="button"], input[type="file"]::-webkit-file-upload-button {
  background-color: #fa9a1c;
  color: #000000;
  border: 2px solid #000000;
  padding: 8px 16px;
  border-radius: 5px;
  display: inline-block;
  transition: background-color 0.2s, color 0.2s;
  text-decoration: none;
}

.form-signin label {
  font-weight: bold; /* Bold labels */
}

.form-signin input[type="text"],
.form-signin input[type="password"] {
  width: 100%; /* Full width input fields */
  margin-bottom: 15px; /* Add space between input fields */
  border: 1px solid #ccc; /* Gray border */
  border-radius: 3px; /* Slightly rounded corners */
}

.form-signin button {
  width: 100%; /* Full width button */
  padding: 10px; /* Add padding */
  border: none; /* Remove default button border */
  border-radius: 3px; /* Rounded corners */
  background-color: #e47c05; /* Orange button background */
  color: #fff; /* White text color */
  font-size: 1.2em; /* Larger font size */
  cursor: pointer; /* Add pointer cursor */
}

.form-signin button:hover {
  background-color: #f7b66d; /* Darker orange on hover */
}

/* Hover effect for all buttons */
.btn:hover, .btn-primary:hover, .btn-secondary:hover, .btn-info:hover, input[type="submit"]:hover, input[type="button"]:hover {
  background-color: #fba83c;
  color: #ffffff;
}

/* Styles for social icons */
.social-icon {
  font-size: 24px;
  margin: 0 15px;
  color: #ffffff;
  transition: transform 0.3s ease-in-out;
}

.social-icon:hover {
  transform: scale(1.2);
  color: #ff8019;
}

/* Profile picture styling */
.profile-picture img {
  transition: transform 0.3s ease;
  border-radius: 50%;
}

.profile-picture img:hover {
  transform: scale(1.1);
}

/* Card styling */
.card {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border: 1px solid #ddd;
}

.card:hover {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
}

/* Media queries for responsiveness */
@media screen and (max-width: 768px) {
  .social-icon {
      font-size: 20px;
  }
}

.showcase {
  position: absolute;
  right: 0;
  width: 100%;
  min-height: 100%;
  padding: 50px;
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  background: rgb(215, 222, 191);
  background-attachment: scroll;
  transition: 0.5s;
  z-index: 2;
}

/* Text color styling for specific sections */
.container .row .text-center p,
.container .row .text-center strong,
.container .row .text-center a,
.profile-info {
  color: #000; /* Ensure text is black for visibility */
}

textarea, .btn-post {
  border-radius: 8px; /* Rounded corners for textarea and post button */
}
label[for="id_gender"],label[for="id_age"], label[for="id_picture"],label[for="id_bio"] {
  /* CSS properties to style the label */
  color: #333; /* Change the text color */
  font-weight: bold; /* Make the label text bold */
  margin-bottom: 5px; /* Add some space below the label */
  display: block; /* Ensure the label takes up its own line for better layout */
}

.showcase .profile-picture, .showcase .row {
  display: flex;
  justify-content: center; /* Center horizontally for flex items */
  width: 100%; /* Ensure they take full width of their parent to center content effectively */
}

.showcase .profile-picture {
  align-items: center; /* Center vertically if it's a flex container */
}



.profile-picture {
  width: 300px; /* Adjust the width as needed */
  height: 700px; /* Adjust the height as needed */
}

.wide-flex-container {
  width: 700px;
}

